<resources>
    <string name="app_name">JmElektroManEx</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="create_account_fragment_label">Create Account Fragment</string>
    <string name="work_order_list_fragment_label">Workorder List Fragment</string>
    <string name="work_order_fragment_label">Workorder Fragment</string>
    <string name="details_fragment_label">Details Fragment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="New">New</string>
    <string name="welcome_message" />
    <string name="reopen">Reopen</string>
    <string name="city">City</string>
    <string name="device">Device</string>
    <string name="code">Code</string>
    <string name="customer">Customer</string>
    <string name="processed">Processed</string>
</resources>